--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
         jvmTarget = '1.8'
     }
     dataBinding {
+        //noinspection DataBindingWithoutKapt
         enabled = true
     }
 }
